# business-finder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle-natural-earth.config.ts  generate_grid.py  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: docker.yml
drizzle/: 0000_ancient_gorilla_man.sql  0000_bored_sunspot.sql  0000_burly_joystick.sql  0000_chubby_jack_flag.sql  0000_cloudy_mandroid.sql  0000_colorful_ghost_rider.sql  0000_cool_gorilla_man.sql  0000_elite_cardiac.sql  0000_fair_iron_patriot.sql  0000_famous_robin_chapel.sql  0000_harsh_shadowcat.sql  0000_late_energizer.sql  0000_light_talisman.sql  0000_mysterious_marten_broadcloak.sql  0000_open_hairball.sql  0000_outgoing_gunslinger.sql  0000_panoramic_anita_blake.sql  0000_purple_the_phantom.sql  0000_rich_diamondback.sql  0000_salty_sabretooth.sql  0000_slippery_boom_boom.sql  0000_solid_captain_cross.sql  0000_special_slapstick.sql  0000_tan_silver_sable.sql  0000_true_human_cannonball.sql  0000_young_genesis.sql  reset-db.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: extract-gadm-data.ts  setup-natural-earth.ts
src/: client.ts  dev.ts  index.ts  main.ts  scrape.ts  server.ts  view.ts  viewer.ts
src/db/: index.ts  schema.ts
src/lib/: circle-packing copy.ts  circle-packing.ts  client.ts  constants.ts  country-grid.ts  extract-gadm-data.ts  geometry.ts  germany-grid.ts  grid-manager copy.ts  grid-manager.ts  grid-repositroy.ts  hex-grid-generator.ts  natural-earth-grid.ts  next.config.ts  scrape.ts  settings.ts  (+2 more)
(+13 files in other folders)
