[project]
name = "circle-packing-grid"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "psycopg2-binary>=2",
  "python-dotenv>=1",
  "humanize>=4",
  "geopy>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
